# FileOrganizer

./: .gitignore  CHECKLIST.md  PROJECT_PLAN.md  README.md  main.py  pyproject.toml  requirements-dev.txt  version_info.txt
release/: FileOrganizer-v0.2.0.sha256
src/: app.py  i18n.py  models.py  organizer.py  utils.py
tests/: test_i18n.py  test_organizer.py  test_smoke.py
