[project]
name = "FileOrganizer"
version = "0.2.0"
description = "FileOrganizer app to organize files into date-based folders."
requires-python = ">=3.13"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
